welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:2: error: type mismatch;
 found   : Unit
 required: String
  if ((a%3==0)&&(a%5==0)){
  ^